# pgproxy

./: .gitignore  config.toml  pyproject.toml
in/main/: ${N}-create_comon_proc${after-all}.sql.tmpl  ${N}-create_proc_${schema}_${proc}.sql.tmpl
in/proxy/: ${N}-create_proc_${schema}_${proc}.sql.tmpl  ${N}-create_schema_${schema}.sql.tmpl
pgproxy/: DbViewer.py  TemplateProcessor.py  config.py  main.py  placeholders.py
pgproxy/models/: arg.py  proc.py
